<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/radioGroup"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/uploadText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_songs_to_upload"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/radioGroup" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_cloud_upload_24"
            android:background="@color/white"
            android:paddingRight="20dp"
            android:onClick="onSelectSongsButtonClick"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_emotion_of_the_song_s"
            android:paddingVertical="10dp"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/radio_happy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/happy"
                android:textSize="50px"/>

            <RadioButton
                android:id="@+id/radio_sad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sad"
                android:textSize="50px"/>

            <RadioButton
                android:id="@+id/radio_neutral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/neutral"
                android:textSize="50px"/>

            <RadioButton
                android:id="@+id/radio_angry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/angry"
                android:textSize="50px"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical" >

        <Button
            android:layout_width="match_parent"
            android:id="@+id/upload"
            android:layout_height="wrap_content"
            android:background="@color/av_orange"
            android:text="@string/upload"
            android:textColor="@color/white"
            android:gravity="center"
            android:onClick="onSubmit"
            />

    </LinearLayout>


</LinearLayout>